force-app/main/default/objects/DeliveryClaim__c/DeliveryClaim__c.object-meta.xml
<CustomObject>
    <label>배송클레임</label>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>배송클레임 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>