force-app/main/default/objects/DeliveryClaim__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>고객사명</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>배송클레임</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>