force-app/main/default/objects/DeliveryClaim__c/fields/activityReportInfo__c.field-meta.xml
<CustomField>
    <fullName>activityReportInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>활동 보고</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CreatedById</field>
            <operation>equals</operation>
            <valueField>ActivityReport__c.CreatedById</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ActivityReport__c</referenceTo>
    <relationshipLabel>배송클레임</relationshipLabel>
    <relationshipName>wqLE</relationshipName>
    <type>Lookup</type>
</CustomField>