force-app/main/default/objects/DeliveryClaim__c/fields/CJLCenter__c.field-meta.xml
<CustomField>
    <fullName>CJLCenter__c</fullName>
    <label>CJL배송센터</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>값추후입력예정</fullName>
            </value>
            <value>
                <fullName>인천신선센터</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>