force-app/main/default/objects/DeliveryClaim__c/fields/ClaimType__c.field-meta.xml
<CustomField>
    <fullName>ClaimType__c</fullName>
    <label>클레임 유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTD미준수</fullName>
            </value>
            <value>
                <fullName>배송지연</fullName>
            </value>
            <value>
                <fullName>미배송</fullName>
            </value>
            <value>
                <fullName>재배송미이행</fullName>
            </value>
            <value>
                <fullName>오더임의삭제</fullName>
            </value>
            <value>
                <fullName>중복클레임 / 기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>