force-app/main/default/objects/DeliveryClaim__c/fields/fm_AccountCode__c.field-meta.xml
<CustomField>
    <fullName>fm_AccountCode__c</fullName>
    <formula>Account__r.CustomerID__c</formula>
    <label>고객코드</label>
    <type>Text</type>
</CustomField>