force-app/main/default/objects/DeliveryClaim__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <label>주문일자</label>
    <type>Date</type>
</CustomField>