force-app/main/default/objects/DeliveryClaim__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>제목</label>
    <length>255</length>
    <type>Text</type>
</CustomField>