force-app/main/default/objects/DeliveryClaim__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>영업그룹</label>
    <length>255</length>
    <type>Text</type>
</CustomField>