force-app/main/default/objects/DeliveryClaim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>OrderDate__c</columns>
    <columns>CJLCenter__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>