force-app/main/default/objects/DeliveryClaim__c/listViews/reqtable.listView-meta.xml
<ListView>
    <fullName>reqtable</fullName>
    <columns>NAME</columns>
    <columns>OrderDate__c</columns>
    <columns>CJLCenter__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>요청목록형태</label>
</ListView>